ripple-core: Stubs added.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>0.0.1</version>
 
     <modules>
+        <module>core</module>
         <module>engine</module>
         <module>agent</module>
     </modules>
