--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
     <version>0.0.1</version>
 
     <modules>
-        <module>core</module>
+        <module>server</module>
+        <module>client</module>
+        <module>test</module>
         <module>engine</module>
         <module>agent</module>
     </modules>
