--- a/client/pom.xml
+++ b/client/pom.xml
@@ -15,7 +15,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ripple-core</artifactId>
+    <artifactId>ripple-client</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
