--- a/test/pom.xml
+++ b/test/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>ripple-server</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ripple</groupId>
+            <artifactId>ripple-client</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
