--- a/test/pom.xml
+++ b/test/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>ripple-client</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
