--- a/client/pom.xml
+++ b/client/pom.xml
@@ -17,7 +17,14 @@
 
     <artifactId>ripple-client</artifactId>
     <packaging>jar</packaging>
+
     <dependencies>
+        <dependency>
+            <groupId>ripple</groupId>
+            <artifactId>ripple-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
