--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0</version>
 
     <modules>
+        <module>common</module>
         <module>server</module>
         <module>client</module>
         <module>test</module>
