ripple: Update version of dependencies

--- a/ripple/test/pom.xml
+++ b/ripple/test/pom.xml
@@ -51,5 +51,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ripple-test</finalName>
     </build>
 </project>
