--- a/ripple/client/pom.xml
+++ b/ripple/client/pom.xml
@@ -33,12 +33,12 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
-            <version>9.4.34.v20201102</version>
+            <version>9.4.48.v20220622</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.6</version>
+            <version>4.5.13</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-logging</artifactId>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.3</version>
+            <version>2.12.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -87,5 +87,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ripple-client</finalName>
     </build>
 </project>
