--- a/ripple/common/pom.xml
+++ b/ripple/common/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.5.6</version>
+            <version>4.5.13</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-logging</artifactId>
@@ -39,13 +39,13 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.69.Final</version>
+            <version>4.1.77.Final</version>
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.3</version>
+            <version>2.12.6.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -83,5 +83,6 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>ripple-common</finalName>
     </build>
 </project>
