--- a/ripple/test/pom.xml
+++ b/ripple/test/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>ripple-client</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.1.2</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
