--- a/ripple-server/pom.xml
+++ b/ripple-server/pom.xml
@@ -36,6 +36,11 @@
             <version>9.4.54.v20240208</version>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-http</artifactId>
+            <version>9.4.54.v20240208</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.17.2</version>
